--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=3001
 
+#Logging for requests
+logging.level.org.springframework.web=TRACE
+logging.level.org.springframework.security=TRACE
+logging.level.org.hibernate=ERROR
