--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=3001
 logging.level.org.springframework.web=TRACE
 logging.level.org.springframework.security=TRACE
 logging.level.org.hibernate=ERROR
+
+#Oauth Client Registration properties
